--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="back"></div>
       </div>
       <div class="inside">
-        <p>Wishing you a very happy birthday filled with love and laughter</p>
+        <p>Happy Birthday my love, Wishing you a day filled with joy, love, and wonderful surprises. You mean the world to me, and I wanted to create this special webpage to celebrate you on your birthday. Enjoy the memories, the laughs, and all the moments we've shared together.</p>
         <h1>&#127873;</h1>
       </div>
     </div>
