--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="back"></div>
       </div>
       <div class="inside">
-        <p style="font-size:11px; ">Happy Birthday my love, Wishing you a day filled with joy, love, and wonderful surprises. You mean the world to me, and I wanted to create this special webpage to celebrate you on your birthday. Enjoy the memories, the laughs, and all the moments we've shared together.</p>
+        <p style="font-size:9px; ">Happy Birthday my love, Wishing you a day filled with joy, love, and wonderful surprises. You mean the world to me, and I wanted to create this special webpage to celebrate you on your birthday. Enjoy the memories, the laughs, and all the moments we've shared together, Love you so much, God bless you, and best wishes for tomorrow big day, love and care to you</p>
         <h1>&#127873;</h1>
       </div>
     </div>
